--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
     </div>
 
     </div>
+    <div class="donate-form">
     <div class="input-part">
         <input type="number" placeholder="other amount(taka)">
     </div>
-    <a href="" class="input-btn">Donate Now</a>
+    <div>
+    <a href="" class="input-btn" >Donate Now</a>
+    </div>
+    </div>
+
 
     </section>
     <section class="donation-plan">
@@ -108,16 +113,17 @@
             <h1>Get Our Updates</h1>
             <P>To get our regular Updates Please subscribe through e-mail.</P>
         </div>
-        <div class="e-mail-form">
-            <form><input type="e-mail" placeholder="E-mail"></form>
-            <a class="btn" href="">subscribe</a>
+        <div class="e-mail">
+            <form><input type="e-mail" placeholder="E-mail">
+            <a class="btn-new" href="">subscribe</a></form>
             
             </div>
 
 
         </div>
+    </Section>
     </body>
 <footer>
-    <p>Be humble.<br>I am gonna do it.</p>
+    <p class="text">Be humble.<br>I am gonna do it.</p>
 </footer>
 </html>
