--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
     </Section>
     </body>
 <footer>
-    <p class="text">Be humble.<br>I am gonna do it.</p>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <p class="text">Be humble.</p>
+    <p id="white">I am gonna do it.</p>
 </footer>
 </html>
